Fixed whitespace on right side of screen

--- a/aview-app/src/Styles/Background.css
+++ b/aview-app/src/Styles/Background.css
@@ -3,9 +3,9 @@
 .Landing-background{
     /* BG_and_blobs */
         
-        position: relative;
+        /* position: relative;
         width: 1440px;
-        height: 4615px;
+        height: 4615px; */
         background: #090C32;
         
     
